--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flowbite-react": "^0.5.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
