--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "@next/font": "^13.4.19",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "antd": "^5.11.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
-    "next": "13.4.19",
+    "next": "^14.0.3",
     "postcss": "8.4.28",
     "preline": "^1.9.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
