--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.17",
     "antd": "^5.11.1",
     "autoprefixer": "10.4.15",
+    "dayjs": "^1.11.10",
     "eslint": "8.47.0",
     "eslint-config-next": "^14.0.3",
     "flowbite": "^1.8.1",
